# ecen524-final-team6

./: README.md
auto_pick_place_moveit/: CMakeLists.txt  package.xml
auto_pick_place_moveit/src/: auto_pick_place_moveit.cpp
franka_description/robots/: combined.urdf.xacro  combined.xacro
franka_moveit_config/config/: ompl_planning.yaml
franka_moveit_config/launch/: moveit.launch.py
franka_moveit_config/srdf/: combined.srdf.xacro  combined.xacro
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: hello_moveit.cpp  hello_moveit_og.txt  hello_moveit_v2.txt  hello_moveit_v3.txt  object_test.cpp
